# polinBackgroundExtractor

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  make_debug.sh  make_rel.sh  rest_api_example.sh  run_extractor_executable.sh  run_server.sh
extractor/: .cproject  .project  CMakeLists.txt  bgExtractor.cpp  bgExtractor.hpp  extractor_main.cpp  main.cpp
server/: CMakeLists.txt  server.cpp  server.hpp  server_main.cpp
wrapper/: CMakeLists.txt  wrapper.cpp
www/: style.css  video_extractor.html
